# cs

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  cs.cpp  cspell.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build-ubuntu.yml  build-win.yml  build.yml  codecov.yml  codeql.yml  msbuild.yml
docker/: Dockerfile  docker-compose.yml
docs/: class_abstract.md  concept.md  data_structure.md  index.md  platforms.md  preface.md  setup.md  setup_mac.md
docs/Developer/: Feature plan.md  Packaging with Wix.md  Testing and coverage.md
examples/: CMakeLists.txt
examples/simple/: CMakeLists.txt  main.cpp
examples/simple_glfw/: CMakeLists.txt  main.cpp
examples/wpf/: App.xaml  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs  packages.config  wpf.csproj  wpf.sln
examples/wpf/Properties/: AssemblyInfo.cs  Resources.Designer.cs
examples/wpf_gl/: CMakeLists.txt  main.cpp
package/: CMakeLists.txt
package/wix/: cs.wxs  license.rtf  make_wix_installer.bat
src/: CMakeLists.txt  version.rc.in
src/app/: CMakeLists.txt
src/app/include/cs/: app.h  app_fwd.h
src/app/include/cs/app/: CSApp.h  CSCommand.h  CSCommandCollection.h  CSDocument.h  CSDocument2d.h  CSDocument3d.h  CSDocumentCollection.h  CSFactory.h  CSPluginManager.h  app_common.h  common.h  csapp.h  csdocument.h  csdocumentcollection.h
src/app/src/: CSApp.cpp  CSCommand.cpp  CSCommandCollection.cpp  CSDocument.cpp  CSDocument2d.cpp  CSDocument3d.cpp  CSDocumentCollection.cpp  CSPluginManager.cpp  cs_app.cpp  csapp.cpp  csdocument.cpp  csdocumentcollection.cpp
src/base/: CMakeLists.txt  README.md
src/base/include/cs/: base.h  base_fwd.h
src/base/include/cs/base/: CSColor.h  CSConstants.h  CSException.h  CSFactory.h  CSPath.h  CSString.h  CSVector.h  ICSCollection.h  base_common.h  common.h  cscolor.h  csstring.h  csvector.h
src/base/src/: CSColor.cpp  CSException.cpp  CSPath.cpp  CSString.cpp  CSVector.cpp  base.cpp  csstring.cpp  csvector.cpp
src/core/: CMakeLists.txt
src/core/include/cs/: core.h  core_fwd.h
src/core/include/cs/core/: CSBufferObject.h  CSConfig.h  CSLogger.h  CSObject.h  Entity.h  Geometry.h  ICSPlugin.h  Topology.h  UUID.h  common.h  core_common.h  cs_core.h  csobject.h  entity.h  geometry.h  geometry2d.h  topo.h  topology.h
src/core/include/cs/core/geometry2d/: Geometry2d.h  geometry2d.h
src/core/src/: CSBufferObject.cpp  CSConfig.cpp  CSLogger.cpp  CSObject.cpp  Enity.cpp  Geometry2d.cpp  UUID.cpp  cs_core.cpp  csobject.cpp  entity.cpp  geometry.cpp  geometry2d.cpp
src/drawing/: CMakeLists.txt
src/drawing/docs/: notes.md
src/drawing/include/cs/: drawing.h  drawing_fwd.h
src/drawing/include/cs/drawing/: CSSheet.h  Enum.h  common.h  drawing_common.h
src/drawing/src/: CSSheet.cpp
src/kernel/: CMakeLists.txt
src/kernel/include/cs/: kernel.h  kernel_fwd.h
src/kernel/include/cs/kernel/: CSKernel.h  CurveType.h  Entity.h  Geometry.h  Topology.h  common.h
src/kernel/include/cs/kernel/kernel2d/: Circle2d.h  Curve2d.h  Geometry2d.h  Geometry2dProperty.h  Segment2d.h
src/kernel/src/: CSKernel.cpp  Circle2d.cpp  Entity.cpp  Geometry2d.cpp  Segment2d.cpp
src/math/: CMakeLists.txt  README.md
src/math/include/cs/: math.h  math_fwd.h
src/math/include/cs/math/: CSMath.h  CSQuaternion.h  CSVector.h  common.h
src/math/src/: CSMath.cpp  CSQuaternion.cpp  CSVector.cpp
src/modeler/: CMakeLists.txt
src/modeler/include/cs/: modeler.h  modeler_fwd.h
src/modeler/include/cs/modeler/: CSModeler.h  Modeler.h  common.h  modeler_common.h
src/modeler/src/: CSModeler.cpp  Modeler.cpp
src/plugins/: CMakeLists.txt
src/plugins/simple/: CMakeLists.txt  SimplePlugin.cpp  SimplePlugin.h
src/plugins/simple/include/: common.h
src/render/: CMakeLists.txt
src/render/include/cs/: render.h  render_fwd.h
src/render/include/cs/render/: CSDisplayableObject.h  Camera.h  EmptyRenderer.h  GLFWRenderer.h  Material.h  Mesh.h  Node.h  Renderer.h  Scene.h  camera.h  common.h  material.h  mesh.h  render_common.h  renderer.h  scene.h
src/render/src/: CSDisplayableObject.cpp  Camera.cpp  GLFWRenderer.cpp  Material.cpp  Node.cpp  Renderer.cpp  Scene.cpp  camera.cpp  cs_render.cpp  material.cpp  renderer.cpp  scene.cpp
test/: CMakeLists.txt  TestCSString.cpp  main.cpp
test/app/: TestCSApp.cpp
test/base/: TestCSColor.cpp  TestCSString.cpp  TestCSVector.cpp
test/core/: TestTopology.cpp
test/drawing/: TestCSSheet.cpp
test/kernel/: TestCSKernel.cpp  TestCircle2d.cpp  TestEntity.cpp
test/modeler/: TestModeler.cpp
test/render/: TestRender.cpp
third/: README.md
